# noteout

./: .gitignore  LICENSE  README.md  pyproject.toml  test-requirements.txt
.github/workflows/: test.yml
extra/: README.md  add-meta.lua  write-json.lua
noteout/: __init__.py  drop_div_spans.py  filter_code.py  filter_divspans.py  filter_pre.py  mark_notebooks.py  nb_only.py  write_doc.py  write_meta.py  write_notebooks.py
noteout/tests/: debug_filter.py  nb1.Rmd  nb1.json  nb1_nb_links.Rmd  nb1_no_py.Rmd  nb1_no_r.Rmd  nb1_python_nbs.Rmd  nb1_r_nbs.Rmd  nb2.Rmd  test_filter_pre.py  test_nb1.py  test_nb2.py  test_nb_only.py  test_qbook.py  tutils.py
noteout/tests/qbook/: .gitignore  Makefile  _quarto.yml  _variables.yml  filter_divspans.py  intro.Rmd  write_meta.py
quarto-example/: Makefile  _quarto.yml  summary.qmd
src/noteout/: __init__.py  add_notebook_links.py  export_notebooks.py  filter_code.py  filter_divspans.py  filter_nb_only.py  filter_pre.py  mark_notebooks.py  nutils.py  proc_nb_divs.py  process_notebooks.py  write_doc.py  write_meta.py  write_notebooks.py
src/noteout/tests/: conftest.py  nb1_python_nbs.Rmd  nb1_r_nbs.Rmd  test_add_notebook_links.py  test_export_notebooks.py  test_filter_pre.py  test_mark_notebooks.py  test_nb1.py  test_nb2.py  test_nb_only.py  test_nutils.py  test_proc_nb_divs.py  test_qbook.py  test_write_notebooks.py  tutils.py
src/noteout/tests/qbook/: .gitignore  _quarto.yml  filter_nb_only.py  filter_pre.py  write_doc.py  write_notebooks.py
tests/: conftest.py  nb1.Rmd  nb1_no_py.Rmd  nb1_python_nbs.Rmd  test_export_notebooks.py  test_nb2.py  test_nb_only.py  test_qbook.py  tutils.py
tests/qbook/: .gitignore  _quarto.yml
tools/: pd2json.py
