[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "noteout"
author = "Matthew Brett"
author-email = "matthew.brett@gmail.com"
home-page="https://github.com/matthew-brett/noteout"
classifiers = ["License :: OSI Approved :: BSD License",
               "Programming Language :: Python :: 3"]
description-file="README.md"
# Check against requirements.txt
requires = [
    'panflute',
    'jupytext',
]
requires-python=">=3.6"

[tool.flit.scripts]
noteout-filter-divspans = "noteout.filter_divspans:main"
noteout-write-notebooks = "noteout.write_notebooks:main"
noteout-filter-nb-only = "noteout.nb_only:main"
noteout-filter-pre = "noteout.filter_pre:main"
noteout-write-meta = "noteout.write_meta:main"
