[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "noteout"
dynamic = ["version", "description"]
authors = [
    { name = "Matthew Brett", email = "matthew.brett@gmail.com" },
]
maintainers = [
    { name = "Matthew Brett", email = "matthew.brett@gmail.com" },
]
license = { text = "BSD license" }
classifiers = ["License :: OSI Approved :: BSD License",
               "Programming Language :: Python :: 3"]
readme="README.md"
dependencies = [
    'panflute',
    'jupytext',
    'beautifulsoup4',
    'nbclient'
]
requires-python=">=3.6"

[project.urls]
Homepage = "http://github.com/matthew-brett/noteout"

[project.optional-dependencies]
test = [
    'pytest',
    'pandas',
    'matplotlib',
    'ipykernel'
]

[project.scripts]
noteout-filter-divspans = "noteout.filter_divspans:main"
noteout-write-notebooks = "noteout.write_notebooks:main"
noteout-mark-notebooks = "noteout.mark_notebooks:main"
noteout-export-notebooks = "noteout.export_notebooks:main"
noteout-add-notebook-links = "noteout.add_notebook_links:main"
noteout-filter-nb-only = "noteout.filter_nb_only:main"
noteout-filter-pre = "noteout.filter_pre:main"
noteout-write-meta = "noteout.write_meta:main"
noteout-write-doc = "noteout.write_doc:main"
noteout-proc-nbs = "noteout.process_notebooks:main"
